--- a/src/app/orbit-list/orbit-list.component.html
+++ b/src/app/orbit-list/orbit-list.component.html
@@ -8,8 +8,8 @@
       <th>Launch Date</th>
    </tr>
    <!-- TODO: put <tr *ngFor=""></tr> here -->
-   <tr  *ngFor = "let satellite of satellites">{{ satellite }}
-       <td>{{ satellite.name }}</td>
+   <tr  *ngFor = "let satellite of satellites">
+       <td>{{ satellite.type }}</td>
        <td>test</td>
        
    </tr>
