--- a/src/app/orbit-list/orbit-list.component.css
+++ b/src/app/orbit-list/orbit-list.component.css
@@ -5,15 +5,16 @@
 
 .warning {
     background-color: #da8a8a;
+    
 }
 
 table {
-  color: #111;
-  border-radius: 5px;
+  color: rgb(250, 0, 0);
+  border-radius: 20px;
   overflow: hidden;
-  margin: 12px 0;
-  min-width: 300px;
-  background: #dad8d8;
+  margin: 10px 0;
+  min-width: 400px;
+  background: #4d4c4c;
 }
 
 .header-row {
