--- a/src/app/orbit-list/orbit-list.component.html
+++ b/src/app/orbit-list/orbit-list.component.html
@@ -9,8 +9,11 @@
    </tr>
    <!-- TODO: put <tr *ngFor=""></tr> here -->
    <tr  *ngFor = "let satellite of satellites">
-       <td>{{ satellite.type }}</td>
-       <td>test</td>
+       <td>{{ satellite.name }}</td>
+       <td [class.warning]="changeColor">{{ satellite.type }}</td>
+       <td>{{ satellite.operational }}</td>
+       <td>{{ satellite.orbitType }}</td>
+       <td>{{ satellite.launchDate }}</td>
        
    </tr>
    
