--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,8 @@
 <app-orbit-list [satellites]="sourceList"></app-orbit-list>
+<app-orbit-list [satellites]="displayList"></app-orbit-list>
+
+
+<div class="search-form">
+    <input #searchTerm (keyup.enter)= "search(searchTerm.value); searchTerm.value = ''" type='text'/>
+    <button #searchTerm (click)="search(searchTerm.value); searchTerm.value = ''">Search</button>
+</div>
