--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,10 @@
 <app-orbit-list [satellites]="sourceList"></app-orbit-list>
-<app-orbit-list [satellites]="displayList"></app-orbit-list>
+
 
 
 <div class="search-form">
-    <input #searchTerm (keyup.enter)= "search(searchTerm.value); searchTerm.value = ''" type='text'/>
-    <button #searchTerm (click)="search(searchTerm.value); searchTerm.value = ''">Search</button>
+    <input (keydown.enter) = "search(searchTerm.value)" type='text'/>
+    <button (click) = "search(searchTerm.value)">Search</button>
 </div>
+
+<app-orbit-list [satellites]="displayList"></app-orbit-list>
