--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,9 @@
-<app-orbit-list [satellites]="sourceList"></app-orbit-list>
+<app-orbit-list [satellites]="displayList"></app-orbit-list>
 
 
 
 <div class="search-form">
-    <input (keydown.enter) = "search(searchTerm.value)" type='text'/>
-    <button (click) = "search(searchTerm.value)">Search</button>
+    <input #searchTerm (keydown.enter)="search(searchTerm.value)" type='text'/>
+    <button (click)="search(searchTerm.value)">Search</button>
 </div>
 
-<app-orbit-list [satellites]="displayList"></app-orbit-list>
